// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_674"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone675"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_674"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_674"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone676"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_679"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
      data-focuszone-id="FocusZone680"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_679"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_679"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone681"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              border-color: #8a8886;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, undefined, undefined);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Should reflect theme change 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background: #1b1a19;
          color: #f3f2f1;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      class=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-direction: column;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 100%;
            overflow: hidden;
            width: 100%;
          }
      id="chart_687"
      role="presentation"
    >
      <div
        class=
            ms-FocusZone
            &:focus {
              outline: none;
            }
        data-focuszone-id="FocusZone688"
      >
        <svg
          focusable="false"
          height="0"
          style="display: block;"
          width="0"
        >
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                  width: 1px;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
            id="xAxisGElementchart_687"
            transform="translate(0, -35)"
          />
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
            id="yAxisGElementchart_687"
            transform="translate(40, 0)"
          />
          <g>
             
             
             
          </g>
        </svg>
      </div>
      <div
        class=

            {
              margin-left: 20px;
              margin-top: 8px;
            }
      >
        <div
          class=

              {
                align-items: center;
                margin-bottom: 0;
                margin-left: -8px;
                margin-right: 0;
                margin-top: -8px;
                white-space: nowrap;
                width: 100%;
              }
        >
          <div>
            <div
              style="position: relative;"
            >
              <div
                data-automation-id="visibleContent"
                style="position: fixed; visibility: hidden;"
              >
                <div
                  aria-label="Legends"
                  aria-multiselectable="false"
                  class=
                      ms-FocusZone
                      &:focus {
                        outline: none;
                      }
                  data-focuszone-id="FocusZone689"
                  role="listbox"
                >
                  <div
                    class=
                        ms-OverflowSet
                        {
                          display: flex;
                          flex-wrap: wrap;
                          justify-content: unset;
                          position: relative;
                        }
                    role="group"
                  >
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="undefined"
                        aria-posinset="1"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class=

                              {
                                border-color: #979693;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, undefined, undefined);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        />
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="undefined"
                        aria-posinset="2"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                border-color: #979693;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, undefined, undefined);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        />
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="undefined"
                        aria-posinset="3"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                border-color: #979693;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, undefined, undefined);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="ms-layer"
      />
    </div>
  </div>
</div>
`;
